<resources>
    <string name="add_item_cost_label">Enter the cost (for each item):</string>
    <string name="add_item_name_hint">ex: Chicken Parmesan</string>
    <string name="add_item_name_label">Enter a name for this item:</string>
    <string name="add_item_qty_label">Choose the quantity:</string>
    <string name="add_payer_name_hint">ex: Johnny Patron</string>
    <string name="add_payer_name_label">Enter a name for this person:</string>
    <string name="action_back">Back</string>
    <string name="app_name">Split the Bill</string>
    <string name="btn_done">Done</string>
    <string name="btn_even_split">Evenly</string>
    <string name="btn_finish">Finish</string>
    <string name="btn_item_list">Edit Bill</string>
    <string name="btn_line_item">By Line Item</string>
    <string name="btn_next">Next</string>
    <string name="btn_no">No</string>
    <string name="btn_ok">OK</string>
    <string name="btn_payer_list">Edit Party</string>
    <string name="btn_split">Split</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_yes">Yes</string>
    <string name="confirm_remove_item">Are you sure you want to remove %s from your bill?</string>
    <string name="confirm_remove_payer">Are you sure you want to remove %s from your party?</string>
    <string name="error_add_item_cost_zero">Please enter a cost for this line item</string>
    <string name="error_add_item_name_empty">Please enter a name for this line item</string>
    <string name="error_add_payer_name_empty">Please enter a name for this person</string>
    <string name="error_currency_format">Please enter a valid currency amount</string>
    <string name="error_items_empty">Your bill is empty!  Add line items to your bill by pressing the \"Edit Bill\" button</string>
    <string name="error_no_payers_selected">Please select at least one person</string>
    <string name="error_payers_empty">Your party is empty!  Add people to your party by pressing the \"Edit Party\" button</string>
    <string name="error_tax_invalid">Please enter a tax percentage</string>
    <string name="error_tax_negative">Please enter a tax percentage greater than zero</string>
    <string name="error_total_zero">Please enter the total cost of the bill</string>
    <string name="even_split_payers_label">How many in your party?</string>
    <string name="even_split_total_label">What is the total, after tax?</string>
    <string name="finish_deactivated">Your bill hasn\'t been fully paid!  Please finish assigning payments by selecting a line item above</string>
    <string name="item_count">Current line items: %d</string>
    <string name="item_list_cost_label">Cost (each)</string>
    <string name="item_list_info">This is your bill. Tap the button on the bottom right to add line items to it. Tap an item to remove it. Press the back button when you\'re done.</string>
    <string name="item_list_name_label">Item Name</string>
    <string name="item_list_qty_label">Qty</string>
    <string name="payer_count">Current party size: %d</string>
    <string name="payer_list_info">This is your party. Tap the button on the bottom right to add people to it. Tap a person\'s name to remove them. Press the back button when you\'re done.</string>
    <string name="payer_list_label">Name</string>
    <string name="pct">%</string>
    <string name="query_even_split">Would you like to split the cost of the %1$d %2$s evenly among the %3$d selected people?</string>
    <string name="query_item_select_done">You can edit payments by selecting a line item from your bill. Tap the \"Finish\" button at the bottom when you\'re done.</string>
    <string name="query_item_select_first">Please select a line item from your bill to start assigning payments.</string>
    <string name="query_item_select_next">Please select another line item from your bill to assign payment(s) to it.</string>
    <string name="query_main">Would you like to split your bill evenly among everyone, or split it up by line item?</string>
    <string name="query_number">How many %s would you like to assign payment(s) to?</string>
    <string name="query_payer_reselect_more">Who is paying for these %1$d %2$s?</string>
    <string name="query_payer_reselect_one">Who is paying for this %s?</string>
    <string name="query_payer_select">Please select everyone who had %s:</string>
    <string name="tax_hint">ex: 7.5</string>
    <string name="tax_label">Local sales tax:</string>
    <string name="title_activity_even_split">Split Evenly</string>
    <string name="title_activity_item_list">Edit Bill</string>
    <string name="title_activity_main">Split the Bill</string>
    <string name="title_activity_payer_list">Edit Party</string>
    <string name="title_activity_split">Split by Line Item</string>
    <string name="welcome">Welcome to\nSplit the Bill!</string>
</resources>
